[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/Unit.gd" type="Script" id=1]
[ext_resource path="res://assets/units/light_infantry/light_infantry.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/game_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/shaders/materials/greyscale_material.tres" type="Material" id=4]

[node name="Unit" type="Path2D"]
curve = null
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotate = false
loop = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="PathFollow2D"]
material = ExtResource( 4 )
frames = ExtResource( 2 )
animation = "idle"
playing = true
centered = false

[node name="AuxLabel" type="Label" parent="PathFollow2D/AnimatedSprite"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -20.0
margin_right = 9.0
custom_fonts/font = ExtResource( 3 )
valign = 2

[node name="HealthLabel" type="Label" parent="PathFollow2D/AnimatedSprite"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -19.0
margin_bottom = 0.999981
custom_fonts/font = ExtResource( 3 )
align = 2
valign = 2

[node name="AuxTexture" type="TextureRect" parent="PathFollow2D/AnimatedSprite"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
